# ChangeLog for app-emacs/lua-mode
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/lua-mode/ChangeLog,v 1.19 2009/01/29 02:10:54 fauli Exp $

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  -lua-mode-20061208.ebuild:
  clean up

  22 Nov 2007; nixnut <nixnut@gentoo.org> lua-mode-20070708.ebuild:
  Stable on ppc wrt bug 199953

  22 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  lua-mode-20070708.ebuild:
  stable x86/amd64, bug 199953

  14 Nov 2007; Ulrich Mueller <ulm@gentoo.org> -lua-mode-1.26-r1.ebuild,
  lua-mode-20061208.ebuild:
  Stable on amd64, bug #195109. Remove old version.

  09 Oct 2007; Lars Weiler <pylon@gentoo.org> lua-mode-20061208.ebuild:
  stable ppc, bug #195109

  09 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  lua-mode-1.26-r1.ebuild, lua-mode-20061208.ebuild,
  lua-mode-20070708.ebuild:
  remove src_install as eclass functions are enough

  08 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  lua-mode-20061208.ebuild:
  stable x86, bug 195109

*lua-mode-20070708 (08 Oct 2007)

  08 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  +lua-mode-20070708.ebuild:
  version bump

*lua-mode-20061208 (19 Dec 2006)

  19 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  +lua-mode-20061208.ebuild:
  version bump

  05 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  -lua-mode-1.26.ebuild:
  clean up old versions

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  lua-mode-1.26-r1.ebuild:
  Stable on ppc.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> lua-mode-1.26-r1.ebuild:
  stable on amd64

  13 Dec 2004; Joseph Jezak <josejx@gentoo.org> lua-mode-1.26-r1.ebuild:
  Marked ~ppc for bug #74120.

  01 Oct 2004; Tom Martin <slarti@gentoo.org> lua-mode-1.26-r1.ebuild:
  Marked ~amd64, resolves bug 65075. Thanks to Bardur Arantsson
  <gentoo@scientician.net> for reporting.
