@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX 70lua-mode-gentoo.el 282 RMD160 11b17d1121fafc4f8926ff9f1220c3efb930e7b5 SHA1 ea9d489fb832abdf6b5f6527d71b48055cb6c6ac SHA256 1eeb741e7bdba55b32b64dac5472573dcee65ed8739fd6484f6c378e92630902
 DIST lua-mode-20070708.tar.gz 12505 RMD160 c80ac95cc3cf70329488e071a972422e7e1f40cc SHA1 966b4c01b1aaf673171148c06fb6ac181542785e SHA256 ae6cad1de5808aab620dd165b450d7fe0fe4f6094416ee30cccfa263cc920751
+DIST lua-mode-20071122.tar.gz 12705 RMD160 a001e26d6b9f18a28a78c812d7c9b0bf650d4353 SHA1 6c01b9f835704b369d16cefa01ec96a7e1bebda5 SHA256 93df13a1916c0cade5b76721f26ffdd20fd248f37706ac1effbbdc80e04342fc
 EBUILD lua-mode-20070708.ebuild 522 RMD160 bb28af9b4009f2044d148ba5cbff76454c9b83dc SHA1 006ab08cbb2a4976c4858385addbcd42ced1a0bf SHA256 70441bb7ef616c8a8b530784395d11777a9cb9d62b8c9c24bbeb5df411f2ffa8
-MISC ChangeLog 2336 RMD160 2c56f200f19ba1e888a5627093550e494ae257dc SHA1 606e42bf099da48fb7f260f4acf89eb78c538185 SHA256 399d1f24f0fd6c351eb65567f997055a66df08a3b5b868d89c8d00884e503720
+EBUILD lua-mode-20071122.ebuild 524 RMD160 caf4de982b14b5bebf65468af150f3a315c6ce76 SHA1 8a4fcf3e68e3fa11eba4a3cb0106fc586c3c4b45 SHA256 83c31f66d8663723d0296535cfd6f370e4eb388f743d42a938eca1481406fd54
+MISC ChangeLog 2470 RMD160 0aa98d4a97e401fade33d0bb3120d3db98659e42 SHA1 e113756eb7c2359eb5b4dcf9f3d2c08414217ed0 SHA256 fcbc668ed2181147f7b1b1ec869bb511d50f6cf348c8283cf4bf6597b7facbb4
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkmBEEEACgkQNQqtfCuFneP0nwCggS4ZOM3HxI4ziJMvE4+5AgdT
-uxoAn2t3ifULDkqOzbZUkJepRTojNBgQ
-=DVLv
+iEYEARECAAYFAkmBElsACgkQNQqtfCuFneNFIgCbB7NpSGgsGEEa0Uwguf4o1iO8
+dnAAnRnIe649++l4KZNg+jRK0DG2OPwQ
+=Wbd3
 -----END PGP SIGNATURE-----
