@@ -1,0 +1,18 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/lua-mode/Attic/lua-mode-20071122.ebuild,v 1.1 2009/01/29 02:19:43 fauli Exp $
+
+inherit elisp
+
+DESCRIPTION="An Emacs major mode for editing Lua scripts"
+HOMEPAGE="http://lua-users.org/wiki/LuaEditorSupport"
+SRC_URI="http://luaforge.net/frs/download.php/2724/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~x86"
+IUSE=""
+
+SITEFILE="70${PN}-gentoo.el"
+
+S="${WORKDIR}"
